# imitater

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
config/: example.yaml
src/: launch.py
src/imitater/: __init__.py
src/imitater/agent/: __init__.py  aligned.py  function.py  react.py  registry.py  types.py
src/imitater/config/: config.py
src/imitater/function_prompt/: prompt.py  react.py  react_parser.py  tools_desc.py
src/imitater/model/: __init__.py  chat_model.py  embed_model.py  openvino.md  vino_model.py
src/imitater/service/: __init__.py  app.py  chat.py  common.py  embed.py  protocol.py  vino_chat.py
src/imitater/utils/: generic.py  modelscope.py  vllm_monkey_patch.py
templates/: default.jinja  internlm2.jinja  yi.jinja
tests/: test_openai.py
